# ai-lead-generation-system

./: .env.example  .gitignore  README.md  env.example  google_apps_script.js  main.py  pyproject.toml  test_google_sheets.py
data/cache/: .gitkeep
data/leads/: .gitkeep
data/output/: .gitkeep
pipeline/: __init__.py  enrichment.py
schemas/: schemas.py
services/: __init__.py  ai_service.py  apollo_service.py  hunter_service.py  scraper_service.py
utils/: config.py  logger.py
